dex/templates/monitoring-auth-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-auth-dashboard
  namespace: dex
  labels:
    k8s-app: monitoring-auth-dashboard
spec:
  type: ClusterIP
  selector:
    k8s-app: monitoring-auth-dashboard
  ports:
  - name: http
    port: 4180
    targetPort: http
